--- a/tests/base-theme/config.yaml
+++ b/tests/base-theme/config.yaml
@@ -37,6 +37,27 @@ taxonomies:
   category: "categories"
   tag:       "tags"
 
+menus:
+  main:
+    - name: Home
+      url: '#about'
+      weight: 10
+    - name: Posts
+      url: '#posts'
+      weight: 20
+    - name: Projects
+      url: '#projects'
+      weight: 30
+    - name: Talks
+      url: '#talks'
+      weight: 40
+    - name: Publications
+      url: '#featured'
+      weight: 50
+    - name: Contact
+      url: '#contact'
+      weight: 60
+
 # Multi-lingual mode config
 # There are different options to translate files
 # See https://gohugo.io/content-management/multilingual/#translation-by-filename
