--- a/tests/base-theme/config.yaml
+++ b/tests/base-theme/config.yaml
@@ -9,6 +9,9 @@ module:
   imports:
     - path: github.com/Dzmuh/hugo-bootstrap5-themes/modules/bootstrap5-scss
     - path: github.com/Dzmuh/hugo-bootstrap5-themes/modules/bootstrap5-base-theme
+  mounts:
+    - source: assets
+      target: assets
 
 enableInlineShortcodes: true
 
@@ -17,21 +20,32 @@ markup:
   goldmark:
     renderer:
       unsafe:           true
+  highlight:
+    noClasses:          false
   tableOfContents:
     startLevel:         1
     endLevel:           6
 
-buildDrafts:        true
-buildFuture:        true
-
 #pygmentsCodeFences = true
 #pygmentsStyle = "monokailight"
 
+buildDrafts:        true
+buildFuture:        true
+
+enableRobotsTXT:    true
+metaDataFormat:     "yaml"
+
 params:
   description:          "Theme for Hugo based  Bootstrap v5 - the most popular HTML, CSS, and JS library in the world."
-  author:               "Fralkou Ilya A. (aka Dzmuh)"
-  twitter:              "Dzmuh"
-  github:               "Dzmuh"
+  author:
+    name:               "Fralkou Ilya A. (aka Dzmuh)"
+    twitter:            "Dzmuh"
+    github:             "Dzmuh"
+  twbs:
+    docs_version:       "5.2"
+    current_version:    "5.2.0"
+    docs_baseURL:       "https://getbootstrap.com/docs"
+    repo:               "https://github.com/twbs/bootstrap"
 
 taxonomies:
   category: "categories"
@@ -39,17 +53,17 @@ taxonomies:
 
 menus:
   main:
-    - name: Home
-      url: '/'
+    - name:   Home
+      url:    '/'
       weight: 10
-    - name: Posts
-      url: '#posts'
+    - name:   Docs
+      url:    '/getting-started/'
       weight: 20
-    - name: Projects
-      url: '#projects'
+    - name:   Projects
+      url:    '#projects'
       weight: 30
-    - name: Examples
-      url: /examples/
+    - name:   Examples
+      url:    '/examples/'
       weight: 40
 
 # Multi-lingual mode config
