--- a/tests/base-theme/data/sidebar.yml
+++ b/tests/base-theme/data/sidebar.yml
@@ -7,15 +7,8 @@
   pages:
     - title: Introduction
     - title: Download
-    - title: Contents
-    - title: Browsers & devices
+    - title: CSS
     - title: JavaScript
-    - title: Webpack
-    - title: Parcel
-    - title: Vite
-    - title: Accessibility
-    - title: RFS
-    - title: RTL
     - title: Contribute
 
 - title: Customize
